

cmake_minimum_required(VERSION 3.12)
project(mujoco_ursim)


add_subdirectory(common)

# 添加子项目
# add_subdirectory(test1)
add_subdirectory(test_ik)
add_subdirectory(cartesian_admittance)
# add_subdirectory(test_Cartesian_impdance)
# add_subdirectory(test_Cartesian-Trajectory)
# add_subdirectory(test_DragInCST)
# add_subdirectory(testik_fk)
# add_subdirectory(test_Jacobian)
# add_subdirectory(test_joint_impdance)
# add_subdirectory(testp5)



